--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/worker.rs"
 anyhow = "1.0.89"
 once_cell = "1.19.0"
 prost = "0.13"
-tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
 tonic = "0.12.2"
 
 [build-dependencies]
