--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,16 @@ path = "src/scheduler.rs"
 name = "worker"
 path = "src/worker.rs"
 
+[[bin]]
+name = "loadgen"
+path = "src/loadgen.rs"
+
 [dependencies]
 anyhow = "1.0.89"
 clap = { version = "4.5.18", features = ["derive"] }
 once_cell = "1.19.0"
 prost = "0.13"
+rand = "0.8.5"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
 tonic = "0.12.2"
 
