--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ clap = { version = "4.5.18", features = ["derive"] }
 once_cell = "1.19.0"
 prost = "0.13"
 rand = "0.8.5"
+sha2 = "0.10.8"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
 tonic = "0.12.2"
 
