--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ path = "src/loadgen.rs"
 
 [dependencies]
 anyhow = "1.0.89"
+axum = "0.7.7"
 clap = { version = "4.5.18", features = ["derive"] }
 once_cell = "1.19.0"
+prometheus = "0.13.4"
 prost = "0.13"
 rand = "0.8.5"
 sha2 = "0.10.8"
