--- a/compose.yaml
+++ b/compose.yaml
@@ -3,11 +3,13 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    restart: always
+    restart: unless-stopped
     ports:
       - '9090:9090'
+    user: '1002' # Result of 'id -u'
     volumes:
       - ./monitoring/prometheus:/etc/prometheus
+      - ./monitoring/prometheus/data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--web.external-url=http://localhost:9090'
@@ -15,9 +17,10 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    restart: always
+    restart: unless-stopped
     ports:
       - '3000:3000'
+    user: '1002' # Result of 'id -u'
     volumes:
       - ./monitoring/grafana/data:/var/lib/grafana
       - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
